Add `/health` endpoints to Swagger
