# auth-service/controllers/health_controller.go
@@ -13,6 +13,12 @@ func NewHealthController() *HealthController {
 	return &HealthController{}
 }
 
+// @Summary	Check health
+// @Description	Returns an OK message
+// @Tags	Health
+// @Produce	text/plain
+// @Success	200 {string} string
+// @Router	/auth/health [get]
 func (ctrl *HealthController) GetHealth(c *gin.Context) {
 	c.String(http.StatusOK, "OK")
 }
